TLMBLGIS-102 - fix background scrolling on mobile browsers, let datetime aware browsers use native controls rather than the webshim - as the webshim was very hard to use on mobile

--- a/mbofui/app/css/custom.css
+++ b/mbofui/app/css/custom.css
@@ -61,6 +61,11 @@ body {
   z-index: 1
 }
 
+body.modal-open {
+  overflow: hidden;
+  position:fixed;
+}
+
 
 @media (max-width: 480px) {
   .leaflet-popup-content {width:auto}
